--- a/itorrent.dcproj/project/main.css
+++ b/itorrent.dcproj/project/main.css
@@ -77,67 +77,6 @@ body {
     width: 100%;
 }
 
-#list {
-    background-color: white;
-    overflow: hidden;
-    display: none;
-    padding: 0px;
-    margin: 0px;
-    height: auto;
-    -webkit-margin-top-collapse: separate;
-    -webkit-margin-bottom-collapse: separate;
-    position: relative;
-    width: auto;
-}
-
-.listRowTemplate_template {
-    position: relative;
-    list-style-type: none;
-    overflow: hidden;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    padding: 0px;
-    -webkit-margin-top-collapse: separate;
-    -webkit-margin-bottom-collapse: separate;
-    border-style: solid;
-    border-top-width: 0px;
-    border-right-width: 0px;
-    border-bottom-width: 1px;
-    border-left-width: 0px;
-    border-color: rgb(224, 224, 224);
-    margin-right: 0px;
-    height: 67px;
-    width: auto;
-}
-
-.rowTitle_template {
-    position: absolute;
-    left: 10px;
-    top: 12px;
-    height: 22px;
-    right: 30px;
-    width: auto;
-    color: black;
-    font-family: Helvetica;
-    font-weight: bold;
-    font-size: 20px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-}
-
-.rowArrow_template {
-    position: absolute;
-    width: 8px;
-    height: 13px;
-    background-image: url(Images/chevron.png);
-    background-repeat: no-repeat;
-    top: 17px;
-    right: 11px;
-    margin-left: auto;
-}
-
 #stackLayout {
     position: relative;
     left: 0px;
@@ -240,4 +179,64 @@ body {
     min-height: 20px;
     height: auto;
     margin-bottom: 6px;
+}
+
+#list {
+    overflow: hidden;
+    display: none;
+    padding: 0px;
+    margin-top: 17px;
+    margin-bottom: 17px;
+    background-color: white;
+    -webkit-margin-bottom-collapse: separate;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(172, 172, 172);
+    -webkit-border-top-right-radius: 8px 8px;
+    -webkit-border-top-left-radius: 8px 8px;
+    -webkit-border-bottom-left-radius: 8px 8px;
+    -webkit-border-bottom-right-radius: 8px 8px;
+    position: relative;
+    width: auto;
+    margin-left: 9px;
+    margin-right: 9px;
+    -webkit-margin-top-collapse: separate;
+}
+
+.listRowTemplate_template {
+    position: relative;
+    list-style-type: none;
+    height: 43px;
+    width: auto;
+    overflow: hidden;
+    margin: 0px;
+    padding: 0px;
+    border-style: solid;
+    border-width: 0px;
+    border-color: rgb(172, 172, 172);
+}
+
+.label_template {
+    position: absolute;
+    left: 9px;
+    top: 11px;
+    right: 30px;
+    width: auto;
+    color: black;
+    font-family: Helvetica;
+    font-weight: bold;
+    font-size: 17px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.arrow_template {
+    position: absolute;
+    width: 8px;
+    height: 13px;
+    right: 10px;
+    top: 15px;
+    background-image: url(Images/chevron.png);
+    background-repeat: no-repeat;
 }
