--- a/itorrent.dcproj/project/main.css
+++ b/itorrent.dcproj/project/main.css
@@ -154,13 +154,13 @@ body {
     overflow: hidden;
     white-space: nowrap;
     font-size: 9px;
-    min-height: 10px;
     color: rgb(176, 176, 176);
     left: 209px;
     top: 7px;
-    right: 80px;
+    min-height: 11px;
+    right: 75px;
     width: auto;
-    bottom: 36px;
+    bottom: 35px;
     height: auto;
 }
 
@@ -176,7 +176,7 @@ body {
     left: 209px;
     min-height: 9px;
     top: 18px;
-    right: 80px;
+    right: 75px;
     width: auto;
     bottom: 26px;
     height: auto;
@@ -223,14 +223,16 @@ body {
 #torrentListLevel {
     display: none;
     position: relative;
-    width: auto;
-    margin-right: 0px;
-    min-height: 372px;
     -webkit-border-top-left-radius: 0px 0px;
     -webkit-border-top-right-radius: 0px 0px;
     -webkit-border-bottom-left-radius: 0px 0px;
     -webkit-border-bottom-right-radius: 0px 0px;
     border-width: 7px !important;
+    margin-right: 0px;
+    width: auto;
+    margin-left: 0px;
+    min-height: 372px;
+    height: auto;
 }
 
 #torrentList {
@@ -271,17 +273,6 @@ body {
     width: auto;
     margin-right: 0px;
     margin-left: 0px;
-}
-
-.progressBar_template {
-    position: absolute;
-    right: auto;
-    bottom: auto;
-    margin-top: 0px;
-    height: 15px;
-    left: 9px;
-    width: 258px;
-    top: 29px;
 }
 
 #detailProgressBar {
@@ -510,4 +501,35 @@ body {
     height: 20px;
     width: 35px;
     left: 256px;
+}
+
+.progressBar_template {
+    position: absolute;
+    right: auto;
+    bottom: auto;
+    margin-top: 0px;
+    left: 9px;
+    height: 9px;
+    top: 34px;
+    width: 259px;
+}
+
+.percent_template {
+    color: black;
+    font-family: Helvetica;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    position: absolute;
+    margin-top: 0px;
+    text-align: center;
+    white-space: nowrap;
+    text-shadow: rgb(255, 255, 255) 1px 1px 12px;
+    left: 9px;
+    font-size: 9px;
+    top: 34px;
+    line-height: 12px;
+    right: 29px;
+    width: auto;
+    bottom: 7px;
+    height: auto;
 }
