--- a/itorrent.dcproj/project/main.css
+++ b/itorrent.dcproj/project/main.css
@@ -99,8 +99,7 @@ body {
     margin-bottom: 12px;
     margin-right: 9px;
     width: auto;
-    min-height: 124px;
-    height: auto;
+    height: 124px;
 }
 
 #topRectangleShape {
@@ -290,18 +289,21 @@ body {
     font-family: Helvetica;
     text-overflow: ellipsis;
     overflow: hidden;
-    position: relative;
-    margin-left: 0px;
     -webkit-margin-top-collapse: separate;
     -webkit-margin-bottom-collapse: separate;
     color: rgb(128, 128, 128);
     font-size: 14px;
-    margin-right: 0px;
-    margin-top: 2px;
-    width: auto;
-    height: auto;
-    min-height: 17px;
     white-space: nowrap;
+    position: absolute;
+    top: 53px;
+    margin-top: 0px;
+    height: 16px;
+    width: 284px;
+    right: 8px;
+    margin-left: auto;
+    margin-bottom: auto;
+    left: 8px;
+    margin-right: auto;
 }
 
 #detailName {
@@ -319,8 +321,8 @@ body {
     margin-top: 7px;
     margin-right: 0px;
     width: auto;
-    min-height: 25px;
-    height: auto;
+    text-shadow: rgb(197, 194, 201) 1px 1px 1px;
+    height: 25px;
 }
 
 #startButton {
@@ -340,9 +342,11 @@ body {
     right: auto;
     bottom: auto;
     margin-top: 0px;
-    top: 101px;
     width: 90px;
-    left: 8px;
+    top: 102px;
+    left: 105px;
+    margin-bottom: auto;
+    margin-right: auto;
 }
 
 #stopButton {
@@ -362,29 +366,11 @@ body {
     right: auto;
     bottom: auto;
     margin-top: 0px;
-    top: 101px;
     width: 90px;
-    left: 105px;
-}
-
-#filesButton {
-    font-family: Helvetica;
-    font-weight: bold;
-    font-size: 12px;
-    color: rgb(255, 255, 255);
-    text-shadow: rgba(0, 0, 0, 0.6) 0px -1px 0px;
-    text-align: center;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    height: 30px;
-    -webkit-dashboard-region: dashboard-region(control rectangle);
-    position: absolute;
-    right: auto;
-    bottom: auto;
-    margin-top: 0px;
-    top: 101px;
-    width: 90px;
+    top: 102px;
     left: 202px;
+    margin-bottom: auto;
+    margin-right: auto;
 }
 
 #list {
@@ -412,7 +398,6 @@ body {
 .listRowTemplate_template {
     position: relative;
     list-style-type: none;
-    height: 43px;
     overflow: hidden;
     margin-top: 0px;
     margin-bottom: 0px;
@@ -421,26 +406,11 @@ body {
     border-style: solid;
     border-width: 0px;
     border-color: rgb(172, 172, 172);
-    margin-right: 0px;
     -webkit-margin-top-collapse: separate;
     -webkit-margin-bottom-collapse: separate;
+    margin-right: 0px;
+    height: 41px;
     width: auto;
-}
-
-.label_template {
-    position: absolute;
-    left: 9px;
-    top: 11px;
-    color: black;
-    font-family: Helvetica;
-    font-weight: bold;
-    font-size: 17px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
-    right: 95px;
-    width: auto;
-    height: auto;
 }
 
 #text {
@@ -458,50 +428,6 @@ body {
     margin-right: 9px;
     min-height: 20px;
     height: auto;
-}
-
-.fileStartButton_template {
-    font-family: Helvetica;
-    font-weight: bold;
-    font-size: 12px;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    text-shadow: rgba(0, 0, 0, 0.6) 0px -1px 0px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    -webkit-dashboard-region: dashboard-region(control rectangle);
-    -webkit-margin-top-collapse: separate;
-    -webkit-margin-bottom-collapse: separate;
-    position: absolute;
-    right: auto;
-    bottom: auto;
-    margin-top: 0px;
-    top: 11px;
-    height: 20px;
-    width: 35px;
-    left: 214px;
-}
-
-.fileStopButton_template {
-    font-family: Helvetica;
-    font-weight: bold;
-    font-size: 12px;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    text-shadow: rgba(0, 0, 0, 0.6) 0px -1px 0px;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    -webkit-dashboard-region: dashboard-region(control rectangle);
-    -webkit-margin-top-collapse: separate;
-    -webkit-margin-bottom-collapse: separate;
-    position: absolute;
-    right: auto;
-    bottom: auto;
-    margin-top: 0px;
-    top: 11px;
-    height: 20px;
-    width: 35px;
-    left: 256px;
 }
 
 .progressBar_template {
@@ -532,5 +458,80 @@ body {
     right: 29px;
     width: auto;
     bottom: 7px;
+    height: auto;
+}
+
+.detailFileName_template {
+    position: absolute;
+    left: 9px;
+    color: black;
+    font-family: Helvetica;
+    font-weight: bold;
+    font-size: 17px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    top: 11px;
+    width: 158px;
+    height: 20px;
+}
+
+.detailFilePriority_template {
+    -webkit-appearance: menulist-button;
+    position: absolute;
+    right: auto;
+    bottom: auto;
+    margin-top: 0px;
+    width: 72px;
+    left: 220px;
+    -webkit-border-top-left-radius: 5px 5px;
+    -webkit-border-top-right-radius: 5px 5px;
+    -webkit-border-bottom-left-radius: 5px 5px;
+    -webkit-border-bottom-right-radius: 5px 5px;
+    opacity: 1;
+    border-style: hidden;
+    border-width: 1px !important;
+    height: 20px;
+    min-height: 15px;
+    top: 11px;
+}
+
+#detailPercent {
+    font-family: Helvetica;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    -webkit-margin-top-collapse: separate;
+    -webkit-margin-bottom-collapse: separate;
+    color: rgb(128, 128, 128);
+    font-size: 14px;
+    white-space: nowrap;
+    text-align: center;
+    position: absolute;
+    top: 108px;
+    margin-top: 0px;
+    width: 89px;
+    height: 16px;
+    margin-bottom: auto;
+    right: 203px;
+    margin-left: auto;
+    left: 8px;
+    margin-right: auto;
+}
+
+.detailFilePercent_template {
+    position: absolute;
+    font-family: Helvetica;
+    font-weight: bold;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    font-size: 14px;
+    left: 171px;
+    color: rgb(107, 107, 107);
+    top: 11px;
+    line-height: 20px;
+    right: 83px;
+    width: auto;
+    bottom: 10px;
     height: auto;
 }
