--- a/itorrent.dcproj/project/main.css
+++ b/itorrent.dcproj/project/main.css
@@ -373,46 +373,6 @@ body {
     margin-right: auto;
 }
 
-#list {
-    overflow: hidden;
-    display: none;
-    padding: 0px;
-    margin-bottom: 17px;
-    background-color: white;
-    -webkit-margin-bottom-collapse: separate;
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgb(172, 172, 172);
-    -webkit-border-top-right-radius: 8px 8px;
-    -webkit-border-top-left-radius: 8px 8px;
-    -webkit-border-bottom-left-radius: 8px 8px;
-    -webkit-border-bottom-right-radius: 8px 8px;
-    position: relative;
-    -webkit-margin-top-collapse: separate;
-    margin-top: 13px;
-    margin-right: 9px;
-    width: auto;
-    margin-left: 9px;
-}
-
-.listRowTemplate_template {
-    position: relative;
-    list-style-type: none;
-    overflow: hidden;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: 0px;
-    padding: 0px;
-    border-style: solid;
-    border-width: 0px;
-    border-color: rgb(172, 172, 172);
-    -webkit-margin-top-collapse: separate;
-    -webkit-margin-bottom-collapse: separate;
-    margin-right: 0px;
-    height: 41px;
-    width: auto;
-}
-
 #text {
     color: black;
     font-family: Helvetica;
@@ -534,4 +494,44 @@ body {
     width: auto;
     bottom: 10px;
     height: auto;
+}
+
+#torrentFileList {
+    overflow: hidden;
+    display: none;
+    padding: 0px;
+    margin-bottom: 17px;
+    background-color: white;
+    -webkit-margin-bottom-collapse: separate;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(172, 172, 172);
+    -webkit-border-top-right-radius: 8px 8px;
+    -webkit-border-top-left-radius: 8px 8px;
+    -webkit-border-bottom-left-radius: 8px 8px;
+    -webkit-border-bottom-right-radius: 8px 8px;
+    position: relative;
+    -webkit-margin-top-collapse: separate;
+    margin-top: 13px;
+    margin-right: 9px;
+    width: auto;
+    margin-left: 9px;
+}
+
+.torrentFileListRowTemplate_template {
+    position: relative;
+    list-style-type: none;
+    overflow: hidden;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 0px;
+    padding: 0px;
+    border-style: solid;
+    border-width: 0px;
+    border-color: rgb(172, 172, 172);
+    -webkit-margin-top-collapse: separate;
+    -webkit-margin-bottom-collapse: separate;
+    margin-right: 0px;
+    height: 41px;
+    width: auto;
 }
